@@ -1304,6 +1304,8 @@ private EditText newmsg;
                 nickname.setText(name);
                 status.setText(user.szStatusMsg);
                 
+                boolean selected = userIDS.contains(user.nUserID);
+                boolean isOperator = ttclient.isChannelOperator(user.nUserID, user.nChannelID);
                 boolean talking = (user.uUserState & UserState.USERSTATE_VOICE) != 0;
                 boolean female = (user.nStatusMode & TeamTalkConstants.STATUSMODE_FEMALE) != 0;
                 boolean neutral = (user.nStatusMode & TeamTalkConstants.STATUSMODE_NEUTRAL) != 0;
@@ -1314,35 +1316,28 @@ private EditText newmsg;
                 if(user.nUserID == ttservice.getTTInstance().getMyUserID()) {
                     talking = ttservice.isVoiceTransmitting();
                 }
-                if(talking) {
-                    if(female) {
+
+                String move = selected ? getString(R.string.user_state_selected) : "";
+                String speaking = talking ? getString(R.string.user_state_now_speaking, name) : name;
+                String gender = female ? " 👩 " : neutral ? " 🧑 " : " 👨 ";
+                String op = isOperator ? getString(R.string.user_state_operator) : "";
+                nickname.setContentDescription(move + speaking + gender + op);
+
+                if (talking) {
+                    if (female) {
                         icon_resource = R.drawable.woman_green;
-                        nickname.setContentDescription(getString(R.string.user_state_now_speaking, name) + " 👩");
+                    } else {
+                        icon_resource = R.drawable.man_green; // male or neutral
                     }
-                    else if(male) {
-                        icon_resource = R.drawable.man_green;
-                        nickname.setContentDescription(getString(R.string.user_state_now_speaking, name) + " 👨");
-                    }
-                    else {
-                        icon_resource = R.drawable.man_green;
-                        nickname.setContentDescription(getString(R.string.user_state_now_speaking, name));
-                    }
-                }
-                else {
-                    if(female) {
-                        icon_resource = away? R.drawable.woman_orange : R.drawable.woman_blue;
-                        nickname.setContentDescription(name + " 👩");
-                    }
-                    else if(male) {
-                        icon_resource = away? R.drawable.man_orange : R.drawable.man_blue;
-                        nickname.setContentDescription(name + " 👨");
-                    }
-                    else {
-                        icon_resource = away? R.drawable.man_orange : R.drawable.man_blue;
-                        nickname.setContentDescription(name);
+                } else {
+                    if (female) {
+                        icon_resource = away ? R.drawable.woman_orange : R.drawable.woman_blue;
+                    } else {
+                        icon_resource = away ? R.drawable.man_orange : R.drawable.man_blue; // male or neutral
                     }
                 }
-                status.setContentDescription(away ? getString(R.string.user_state_away) : null);
+
+                status.setContentDescription(away ? getString(R.string.user_state_away) + " " + user.szStatusMsg : null);
 
                 usericon.setImageResource(icon_resource);
                 usericon.setImportantForAccessibility(View.IMPORTANT_FOR_ACCESSIBILITY_NO);
@@ -1584,6 +1579,9 @@ private EditText newmsg;
     } else {
         userIDS.add(selectedUser.nUserID);
     }
+    accessibilityAssistant.lockEvents();
+    channelsAdapter.notifyDataSetChanged();
+    accessibilityAssistant.unlockEvents();
     break;
         case R.id.action_remove: {
             alert.setMessage(getString(R.string.channel_remove_confirmation, selectedChannel.szName));
